test/corpus/tokens.txt
==================
Comment At EOF
==================

// comment at eof

---

(source_file
  (comment))

==================
Identifier Variants
==================

let snake_case UPPER_SNAKE PascalCase camelCase

---

(source_file
  (keyword)
  (identifier
    (identifier_snake_case))
  (identifier
    (identifier_upper_snake_case))
  (identifier
    (identifier_pascal_case))
  (identifier
    (identifier_pascal_case)))

==================
Identifier Termination
==================

snake@case) UPPER@SNAKE, Pascal@Case: camel@Case 10e-10foo

---

(source_file
  (identifier
    (identifier_snake_case))
  (bracket
    (closed_round))
  (identifier
    (identifier_upper_snake_case))
  (delimiter)
  (identifier
    (identifier_pascal_case))
  (operator)
  (identifier
    (identifier_pascal_case))
  (number)
  (identifier
    (identifier_snake_case)))

==================
String Literal
==================

let name = "hello
world"

---

(source_file
  (keyword)
  (identifier
    (identifier_snake_case))
  (operator)
  (string))

==================
Number Literals
==================

64 1_000 _272_172_917 0b1011_0101 0s34_15_01 0o7 0dA2B1 0x00_00_0A_1F 3.14159 0b11.10110100 0b101e-6 10e-10 1g0e-10 0x10p10 0xAp+7 1e0x10 .01 __.__0 0x_._1Ap-10 0) 0e) 10e-10foo
10e+10 10e-10 0b10e10 0b10e+10 0b_._10e-10
---

(source_file
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (operator)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (bracket
    (closed_round))
  (number)
  (bracket
    (closed_round))
  (number)
  (identifier
    (identifier_snake_case))
  (number)
  (number)
  (number)
  (number)
  (number))

==================
Builtin Types
==================

type sumtype producttype f16 f32 f64 f128 bool

---

(source_file
  (builtin_type)
  (builtin_type)
  (builtin_type)
  (builtin_type)
  (builtin_type)
  (builtin_type)
  (builtin_type)
  (builtin_type))

==================
Atomic Types
==================

i0 i1 i3 i32 i128 i1140194019 u0 u64 i0b101 u0x20 i_32 u0dA2 i__32 u0x__20

---

(source_file
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type)
  (atomic_type))

==================
Boolean Values
==================

true false

---

(source_file
  (boolean)
  (boolean))

==================
Keywords
==================

let var fn enum struct if else loop in continue break unreachable

---

(source_file
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword))
